gerer l'accès au produit et client  partie user

--- a/src/Ecommerce/EcommerceBundle/Resources/config/routing/routingProduits.yml
+++ b/src/Ecommerce/EcommerceBundle/Resources/config/routing/routingProduits.yml
@@ -1,5 +1,5 @@
 produits:
-    pattern:  /produits
+    pattern:  /admin/produits
     defaults: { _controller: EcommerceBundle:Produits:produits }
 
 presentation:
