--- a/src/Ecommerce/EcommerceBundle/Resources/config/routing.yml
+++ b/src/Ecommerce/EcommerceBundle/Resources/config/routing.yml
@@ -2,6 +2,10 @@ routingAdmin:
   resource: "@EcommerceBundle/Resources/config/routing/routingAdmin.yml"
   prefix: /admin
 
+routingPanier:
+  resource: "@EcommerceBundle/Resources/config/routing/routingPanier.yml"
+  prefix: /panier
+
 routingProduits:
   resource: "@EcommerceBundle/Resources/config/routing/routingProduits.yml"
   prefix: /
