--- a/src/Ecommerce/EcommerceBundle/Resources/config/services.yml
+++ b/src/Ecommerce/EcommerceBundle/Resources/config/services.yml
@@ -2,13 +2,11 @@ parameters:
 #    ecommerce.example.class: Ecommerce\EcommerceBundle\Example
 
 services:
-    setNewReference:
-      class: Ecommerce\EcommerceBundle\Services\GetReference
-      arguments: [@security.context, @doctrine.orm.entity_manager]
-
-
-    redirectionListener:
-      class: Ecommerce\EcommerceBundle\Listener\RedirectionListener
-      arguments: [@service_container,@session]
+    tva:
+       class: Ecommerce\EcommerceBundle\Twig\Extension\TvaExtension
+       tags:
+          - {name: twig.extension}
+    montantTva:
+      class: Ecommerce\EcommerceBundle\Twig\Extension\MontantTvaExtension
       tags:
-        - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
+        - { name: twig.extension }
