--- a/src/Utilisateurs/UtilisateursBundle/Resources/config/services.yml
+++ b/src/Utilisateurs/UtilisateursBundle/Resources/config/services.yml
@@ -5,3 +5,10 @@ services:
 #    utilisateurs.example:
 #        class: %utilisateurs.example.class%
 #        arguments: [@service_id, "plain_value", %parameter%]
+
+services:
+    twig.extension.date:
+       class: Twig_Extensions_Extension_Date
+       tags:
+            - { name: twig.extension }
+
