--- a/src/Utilisateurs/UtilisateursBundle/Resources/config/services.yml
+++ b/src/Utilisateurs/UtilisateursBundle/Resources/config/services.yml
@@ -6,9 +6,9 @@ services:
 #        class: %utilisateurs.example.class%
 #        arguments: [@service_id, "plain_value", %parameter%]
 
-services:
-    twig.extension.date:
-       class: Twig_Extensions_Extension_Date
-       tags:
-            - { name: twig.extension }
+#services:
+#    twig.extension.date:
+#       class: Twig_Extensions_Extension_Date
+#       tags:
+#            - { name: twig.extension }
 
