--- a/src/Ecommerce/EcommerceBundle/Resources/config/routing/routingReferencement.yml
+++ b/src/Ecommerce/EcommerceBundle/Resources/config/routing/routingReferencement.yml
@@ -2,3 +2,8 @@ referencement:
     pattern:  /
     defaults: { _controller: EcommerceBundle:Referencement:referencement }
 
+referencement_commande:
+    pattern:  /commande
+    defaults: { _controller: EcommerceBundle:Referencement:refcom }
+
+
