update origin master

--- a/src/Ecommerce/EcommerceBundle/Resources/config/routing/routingReferencement.yml
+++ b/src/Ecommerce/EcommerceBundle/Resources/config/routing/routingReferencement.yml
@@ -6,4 +6,8 @@ referencement_commande:
     pattern:  /commande
     defaults: { _controller: EcommerceBundle:Referencement:refcom }
 
+referencement_commande_getting:
+    pattern:  /getting
+    defaults: { _controller: EcommerceBundle:Referencement:getting }
+
 
